# saybar

./: .gitignore  Config.hs  Events.hs  Headers.hs  Main.hs  Requests.hs  Types.hs  Utils.hs  cabal.project  flake.nix  generate-bindings.bash  package.nix  saybar.cabal
app/: Main.hs
bench/: Main.hs
bindings/Manual/: Fcft.hs
lib/: Saywayland.hs  SaywaylandTH.hs
lib/Saywayland/: Events.hs  Headers.hs  Requests.hs  Types.hs  Utils.hs
lib/Saywayland/Internal/: Utils.hs
src/: Bar.hs  Config.hs  Main.hs  Modules.hs  RenderText.hs  Types.hs
