cabal-version: 2.4
name:          saybar
version:       0
build-type:    Simple
author:        saygo-png
maintainer:    saygo-png <saygo.mail@proton.me>
copyright:     2024 saygo-png

common common-options
  build-depends:
    , base    >=4.7 && <5
    , relude

  default-language:   GHC2021
  ghc-options:
    -Weverything -Wno-missed-extra-shared-lib
    -Wno-missing-kind-signatures -Wno-safe -Wno-unsafe
    -Wno-missing-import-lists -Wno-all-missed-specialisations
    -Wno-missed-specialisations -Wno-missing-safe-haskell-mode
    -Wno-missing-exported-signatures -Wno-missing-local-signatures
    -threaded

  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DoAndIfThenElse
    DuplicateRecordFields
    EmptyDataDecls
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NoFieldSelectors
    NoImplicitPrelude
    OverloadedRecordDot
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    RankNTypes
    RoleAnnotations
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeFamilies
    TypeSynonymInstances
    ViewPatterns

library saywayland
  import:          common-options
  build-depends:
    , ansi-terminal
    , binary
    , bytestring
    , containers
    , network
    , template-haskell

  hs-source-dirs:  lib
  exposed-modules: Saywayland, SaywaylandTH

executable saybar
  import:         common-options
  build-depends:
    , binary
    , bytestring
    , containers
    , FontyFruity
    , JuicyPixels
    , network
    , Rasterific
    , typed-process
    , unix
    , vector
    , stm
    , time

  ghc-options:    -rtsopts -with-rtsopts=-N
  hs-source-dirs: src
  main-is:        Main.hs
  build-depends:  saywayland
  other-modules:
    Bar
    Config
    Types
    Modules
